<resources>
    <string name="app_name">TODOs</string>
    <string name="splash_welcome">Ding Dong</string>
    <string name="login_login">Login Here</string>
    <string name="login_username">Username...</string>
    <string name="login_password">Password...</string>
    <string name="login_username_required">Username Required!!!</string>
    <string name="login_password_required">Password Required!!!</string>
    <string name="login_invalid_login">Invalid username or password!!!</string>
    <string name="login_signin">Sign In</string>
    <string name="login_cancel">Cancel</string>
    <string name="quit_application">Do you want to quit application?</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_Title">Title</string>
    <string name="edit_description">Description</string>
    <string name="edit_date">Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">Important</string>
    <string name="edit_medium">Normal</string>
    <string name="edit_low">Low</string>
    <string name="edit_is_complete">Is Complete</string>
    <string name="edit_save">Save</string>
    <string name="edit_cancel_prompt">Do you want to return to main screen?</string>
    <string name="crud_save">Todo Saved.</string>
    <string name="crud_deletebyid">Swapped item is deleted.</string>
    <string name="crud_deleteall">All items are deleted.</string>
    <string name="edit_update">Update</string>
    <string name="crud_update">Todo Updated.</string>
</resources>