<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF"
    android:orientation="vertical"
    tools:context=".EditTodoFragment">

    <EditText
        android:id="@+id/edit_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/edit_Title"
        android:textColorHint="#616161"
        android:inputType="textPersonName"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/edit_description"
        android:textColorHint="#616161"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit_txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/edit_date"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/edit_tv_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/edit_priority"
        android:textColor="#151515"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/edit_rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DFDFDF"
            android:text="@string/edit_high"
            android:textColor="#153b50"
            android:textColorLink="#153b50"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/edit_rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DFDFDF"
            android:text="@string/edit_medium"
            android:textColor="#153b50"
            android:textColorLink="#153b50"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/edit_rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#DFDFDF"
            android:text="@string/edit_low"
            android:textColor="#153b50"
            android:textColorLink="#153b50"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/edit_chk_iscomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:minHeight="48dp"
        android:text="@string/edit_is_complete"
        android:textColor="#153b50"
        android:textColorLink="#153b50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/edit_btn_save"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="#1C7C54"
            android:cursorVisible="true"
            android:text="@string/edit_save"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/edit_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="#cdd3d5"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>